<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_configurations"
        android:paddingHorizontal="30dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"

        android:text="@string/server_ip_address"/>
    <EditText
        android:id="@+id/ipEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:inputType="date"
        />
    <TextView
        android:textColor="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:textSize="16sp"

        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/server_port"/>
    <EditText
        android:id="@+id/portEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:inputType="number"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginHorizontal="10dp"
            android:text="@string/confirm"/>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/transparent"
            android:text="@string/cancel"/>
    </LinearLayout>


</LinearLayout>