<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Credentials.PhoneCredential">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="20sp"
            android:textColor="#fff"
            android:text="@string/verify_your_phone_number" />
        <ImageView
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="vertical"
        android:background="#fff">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp"
            android:text="@string/verify_phone_number_long_description"/>
        <TextView
            android:id="@+id/restartMessage"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginHorizontal="20dp"
            android:textSize="12sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:paddingBottom="3dp"
                android:textColor="@color/colorBlack"
                android:text="@string/plus_972"/>
            <EditText
                android:id="@+id/phoneNumberText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:inputType="phone"
                android:text=""
                android:hint="@string/phone_number_hint"/>
            <Button
                android:id="@+id/confirmButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/confirm_button"
                android:text=""/>
        </LinearLayout>
        <TextView
            android:visibility="invisible"
            android:id="@+id/retryCounter"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:visibility="invisible"
                android:id="@+id/verificationCode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="20dp"
                android:inputType="phone"
                android:hint="@string/verification_code_hint"/>
            <Button
                android:visibility="invisible"

                android:id="@+id/confirmVerificationCode"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/confirm_button" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#9da6a6a6"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/carrier_sms_chargers_may_apply"/>

    </LinearLayout>



</LinearLayout>