<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/header_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="#fff"
        >
        <TextView
            android:paddingHorizontal="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/gallery_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/gallery_button"/>
            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gallery_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/camera_button_dialog"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/camera_button_img"/>
            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/camera_button_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/remove_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/delete_button"/>
            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>