<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#84efefef"
    tools:context=".Profile.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:rotation="180"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/profile"/>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicture"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/no_picture_big"/>
        <ImageView
            android:id="@+id/profile_camera_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/camera_profile_button"
            app:layout_constraintBottom_toBottomOf="@id/profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/profile_text_style">
        <TextView
            android:id="@+id/profileName"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />
        <ImageView
            android:id="@+id/profileNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_user_name_long_description"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/profile_text_style">
        <TextView
            android:paddingTop="20dp"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:text="@string/about_and_phone_number"/>\
        <TextView
            android:id="@+id/profileStatus"
            android:textColor="@color/colorBlack"
            android:paddingTop="20dp"
            android:paddingHorizontal="20dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/status"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#efefef"/>
        <TextView
            android:id="@+id/profilePhoneNumber"
            android:textColor="@color/colorBlack"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>